# Bionic-Agents

./: .gitignore  ARCHITECTURE_CONNECTIVITY.md  DEV_SETUP.md  Dockerfile.dev  README.md
Agent-Builder/: Dockerfile  pnpm-lock.yaml
Agent-Dashboard/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  (+6 more)
Agent-Runtime-Python/: .gitignore  AGENT_SERVER.md  Dockerfile  E2E_TEST_RESULTS.md  INTEGRATION_TEST_RESULTS.md  LIVEKIT_INTEGRATION_TEST_RESULTS.md  README.md  TEST_RESULTS.md  docker-compose.test.yml  pyproject.toml  pytest.ini  start_agent_server.py  start_agent_server_direct.py
Agent-Runtime-Python/alembic/: env.py
Agent-Runtime-Python/docs/: api-contracts.md  migration-progress.md  openapi.yaml
Agent-Runtime-Python/k8s/: DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  QUICK_START.md  README.md  READY_FOR_TESTING.md  TESTING.md  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
Agent-Runtime-Python/scripts/: create_test_schema.sql  setup-test-db.sh  test-schema-connection.py
Agent-Runtime-Python/src/: __init__.py  main.py
Agent-Runtime-Python/src/api/: __init__.py  agents.py  health.py  metrics.py  sessions.py
Agent-Runtime-Python/src/config/: __init__.py  config.py
Agent-Runtime-Python/src/database/: __init__.py  db.py  models.py  operations.py
Agent-Runtime-Python/src/langfuse/: __init__.py  langfuse_client.py
Agent-Runtime-Python/src/livekit/: __init__.py  agent_config_mapper.py  agent_server.py
Agent-Runtime-Python/src/runtime/: __init__.py  agent_instance.py  agent_manager.py  agent_runtime.py  session_manager.py
Agent-Runtime-Python/tests/: README.md  conftest.py  test_api_compatibility.py
Agent-Runtime-Python/tests/e2e/: __init__.py  test_agent_server_e2e.py  test_full_flow.py  test_livekit_agent_flow.py
Agent-Runtime-Python/tests/integration/: __init__.py  test_agent_runtime_livekit.py  test_api_agents.py  test_api_health.py  test_api_sessions.py  test_database_compatibility.py  test_livekit_connection.py
Agent-Runtime-Python/tests/performance/: __init__.py  test_api_performance.py
Agent-Runtime-Python/tests/unit/: test_agent_manager.py  test_config.py  test_database_operations.py  test_session_manager.py
Dynamic-Agent/: Dockerfile  pyproject.toml
Dynamic-Agent/src/: __init__.py  agent.py
(+88 files in other folders)
