[project]
name = "livekit-dynamic-agent"
version = "1.0.0"
description = "Dynamic LiveKit agent that reads configuration from Agent-Builder"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[mcp,images,codecs]>=1.3.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-google>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
